2011-09-05  Andreas Kupries  <akupries@shaw.ca>

	* generic/cpubind.c: Fixed use of C99 features, replaced with C89
	* generic/hwloc.c: code. Sorted the command options. The code should
	* generic/membind.c: now build on a C89 system.
	* generic/object.c:
	* generic/topology.c:

	* generic/cpubind.c: Reformatted for style.
	* generic/hwloc.c:
	* generic/membind.c:
	* generic/object.c:
	* generic/topology.c:

	* generic/bitmap.h: Formatting for style. Plus comments
	* generic/cpubind.h: added to type definitions.
	* generic/membind.h:
	* generic/object.h:
	* generic/topology.h:

	* generic/bitmap.c: Sorted and reformatted the bitmap command
	  options and enum.
	* tests/bitmnap.test: Updated the one test affected by the
	  reordering above.

2011-09-02  Andreas Kupries  <andreask@activestate.com>

	* generic/bitmap.c: Renamed 'is_zero' method to 'is_empty' to be
	  consistent with the generator method 'empty'. Fixed bug in
	  'not', missing error message when a bad bitmap was found.

	* tests/bitmap.test: Completed the tests for the unary bitmap
	  methods.

2011-09-02  Andreas Kupries  <andreask@activestate.com>

	* tests/bitmap.test: Started conversion into a proper
	  tcltest-based testsuite. Started with standard tests checking
	  the basic argument validation of the commands (i.e. wrong#args).

	* generic/bitmap.c (parse_bitmap_args): General cleanup. (1) Moved
	  all checks regarding the number of arguments to the front of the
	  methods. Avoid stuff like allocation of resources if we do not
	  even know yet if the method was called correctly. Less memory
	  churn, and less possibility for error in (not) releasing the
	  resources. (2) Moved all variable declarations to the beginning
	  of the relevant block, improving portability. We still have C89
	  compilers around, which balk on declarations in the middle of a
	  block. That is a C99 feature. Ditto for //-style comments. (3)
	  Went to standard indentation.

	* generic/bitmap.h: Fixed typo in guard ifdef.